// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown matches snapshot 1`] = `
.c5 {
  cursor: pointer;
}

.c3 {
  overflow: visible;
}

.c0 .c2 + .c4 {
  height: 0;
  width: 0;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c0 .c2.focus-within + .c4 {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c0 .c2:focus-within + .c4 {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c0 .c2 > .c4 {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c0 .c2.focus-within > .c4 {
  height: 0;
  width: 0;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c0 .c2:focus-within > .c4 {
  height: 0;
  width: 0;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c0 .c2 > *:not(.c4) {
  -webkit-animation: 100ms bcCCNc ease-out;
  animation: 100ms bcCCNc ease-out;
  position: absolute;
  box-shadow: 0 0.5rem 0.5rem 0 rgba(0,0,0,0.1);
  border: 1px solid #d5d5d5;
  top: calc(100% + 0.4rem);
  left: 0;
}

.c0 .c2 > *:not(.c4) {
  height: 0;
  width: 0;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c0 .c2.focus-within > *:not(.c4) {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c0 .c2:focus-within > *:not(.c4) {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c6 {
  list-style: none;
  margin: 0;
  padding: 0.6rem 0;
  background: #f5f5f5;
  z-index: 1;
}

.c6 li {
  padding: 0.2rem;
}

.c6 li button,
.c6 li a {
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: left;
  cursor: pointer;
  outline: none;
  border: none;
  padding-left: 0.8rem;
  margin: 0;
  height: 3rem;
  background: none;
  min-width: 7rem;
  color: #424242;
  font-size: 1.4rem;
  line-height: 2rem;
}

.c6 li button:focus,
.c6 li a:focus {
  background: #d5d5d5;
  outline: 0.2rem auto Highlight;
  outline: 0.2rem auto -webkit-focus-ring-color;
}

.c1 {
  overflow: visible;
  position: relative;
}

<div
  className="c0 c1 dot-menu-dropdown"
>
  <div
    className="c2 c3"
  >
    <button
      aria-label="Actions"
      className="plain-button dot-menu-toggle c4 c5"
      tabIndex={0}
    >
      <div
        tabIndex={-1}
      >
        <svg
          aria-hidden="true"
          className="dot-menu-icon "
          focusable="false"
          viewBox="0 0 192 512"
        >
          <path
            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
            fill="currentColor"
          />
        </svg>
      </div>
    </button>
    <menu
      className="c6 dot-menu-dropdown-list"
    >
      <li>
        <button
          onClick={[Function]}
          onMouseEnter={[Function]}
          tabIndex={0}
          type="button"
        >
          Delete
        </button>
      </li>
      <li>
        <a
          href="/wooo"
          onClick={[Function]}
          onMouseEnter={[Function]}
          role="button"
          tabIndex={0}
        >
          Edit
        </a>
      </li>
    </menu>
  </div>
  <button
    aria-label="Actions"
    className="plain-button dot-menu-toggle c4 c5"
    tabIndex={0}
  >
    <div
      tabIndex={-1}
    >
      <svg
        aria-hidden="true"
        className="dot-menu-icon "
        focusable="false"
        viewBox="0 0 192 512"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
          fill="currentColor"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Dropdown matches snapshot on right align 1`] = `
.c5 {
  cursor: pointer;
}

.c3 {
  overflow: visible;
}

.c0 .c2 + .c4 {
  height: 0;
  width: 0;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c0 .c2.focus-within + .c4 {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c0 .c2:focus-within + .c4 {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c0 .c2 > .c4 {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c0 .c2.focus-within > .c4 {
  height: 0;
  width: 0;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c0 .c2:focus-within > .c4 {
  height: 0;
  width: 0;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c0 .c2 > *:not(.c4) {
  -webkit-animation: 100ms bcCCNc ease-out;
  animation: 100ms bcCCNc ease-out;
  position: absolute;
  box-shadow: 0 0.5rem 0.5rem 0 rgba(0,0,0,0.1);
  border: 1px solid #d5d5d5;
  top: calc(100% + 0.4rem);
  left: 0;
}

.c0 .c2 > *:not(.c4) {
  height: 0;
  width: 0;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c0 .c2.focus-within > *:not(.c4) {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c0 .c2:focus-within > *:not(.c4) {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c6 {
  list-style: none;
  margin: 0;
  padding: 0.6rem 0;
  background: #f5f5f5;
  z-index: 1;
}

.c6 li {
  padding: 0.2rem;
}

.c6 li button,
.c6 li a {
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: left;
  cursor: pointer;
  outline: none;
  border: none;
  padding-left: 0.8rem;
  margin: 0;
  height: 3rem;
  background: none;
  min-width: 7rem;
  color: #424242;
  font-size: 1.4rem;
  line-height: 2rem;
}

.c6 li button:focus,
.c6 li a:focus {
  background: #d5d5d5;
  outline: 0.2rem auto Highlight;
  outline: 0.2rem auto -webkit-focus-ring-color;
}

.c1 {
  overflow: visible;
  position: relative;
}

<div
  className="c0 c1 dot-menu-dropdown"
>
  <div
    className="c2 c3"
  >
    <button
      aria-label="Actions"
      className="plain-button dot-menu-toggle c4 c5"
      tabIndex={0}
    >
      <div
        tabIndex={-1}
      >
        <svg
          aria-hidden="true"
          className="dot-menu-icon "
          focusable="false"
          viewBox="0 0 192 512"
        >
          <path
            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
            fill="currentColor"
          />
        </svg>
      </div>
    </button>
    <menu
      className="c6 dot-menu-dropdown-list dot-menu-right-align"
    >
      <li>
        <button
          onClick={[Function]}
          onMouseEnter={[Function]}
          tabIndex={0}
          type="button"
        >
          Delete
        </button>
      </li>
      <li>
        <a
          href="/wooo"
          onClick={[Function]}
          onMouseEnter={[Function]}
          role="button"
          tabIndex={0}
        >
          Edit
        </a>
      </li>
    </menu>
  </div>
  <button
    aria-label="Actions"
    className="plain-button dot-menu-toggle c4 c5"
    tabIndex={0}
  >
    <div
      tabIndex={-1}
    >
      <svg
        aria-hidden="true"
        className="dot-menu-icon "
        focusable="false"
        viewBox="0 0 192 512"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
          fill="currentColor"
        />
      </svg>
    </div>
  </button>
</div>
`;
